# order-book

./: .gitignore  CMakeLists.txt  README.md  architecture.md  build_debug.bat  build_output.txt  configure.bat  orderbook_deep_dive.md
benchmarks/: CMakeLists.txt  bench_order_book.cpp
src/: CMakeLists.txt  main.cpp
src/book/: order_book.hpp  price_level.hpp  slippage_estimator.hpp
src/core/: event_bus.hpp  lock_free_queue.hpp  object_pool.hpp  order.hpp  types.hpp
src/downstream/: execution_engine.hpp  portfolio_engine.hpp  risk_engine.hpp
src/engine/: market_maker.hpp  matching_engine.hpp  smart_order_router.hpp  twap_vwap.hpp
tests/: CMakeLists.txt  test_order_book.cpp
